fix(language-switcher): make switcher work on mobile, add outside click logic

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1418,8 +1418,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }
 
-.h-8 {
-  height: 2rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-\[400px\] {
@@ -1490,8 +1490,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: auto;
 }
 
-.w-8 {
-  width: 2rem;
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-\[80\%\] {
